# Kneron

./: README.md
Buildroot/board/vatics/: busybox.config
Buildroot/dl/uclibc/: uClibc-ng-1.0.41.tar.xz
Kernel/: Makefile
Kernel/Documentation/ABI/testing/: configfs-usb-gadget-uvc
Kernel/arch/arm64/: Kconfig.platforms
Kernel/arch/arm64/configs/: leipzig_defconfig
Kernel/drivers/char/: Kconfig  Makefile
Kernel/drivers/char/ie/: Makefile  ie.h  ie_driver.c  ie_driver.h  ie_locals.c  ie_locals.h  ie_regs.h
Kernel/drivers/char/npu/: Makefile  npu.h  npu_driver.c  npu_driver.h  npu_locals.c  npu_locals.h  npu_regs.h
Kernel/drivers/clk/: Kconfig  Makefile
Kernel/drivers/clk/vatics/: Kconfig  Makefile  clk-composite.c  clk-composite.h  clk-div.c  clk-div.h  clk-fixed-factor.c  clk-fixed-factor.h  clk-gate.c  clk-gate.h  clk-leipzig-dbg.c  clk-leipzig.c  clk-leipzig.h  clk-mux.c  clk-mux.h  clk-phase.c  clk-phase.h  clk-pll.c  clk-pll.h  clk.c  clk.h
Kernel/drivers/dma/: Kconfig  Makefile  leipzig_pdma.c
Kernel/drivers/firmware/: Kconfig  Makefile  vtx-sip-smc.c  vtx-sip-smc.h
Kernel/drivers/gpio/: Kconfig  Makefile  gpio-vpl.c
Kernel/drivers/i2c/busses/: i2c-designware-core.h  i2c-designware-master.c  i2c-designware-platdrv.c
Kernel/drivers/iio/adc/: Kconfig  Makefile  sgc-gpadc.c
Kernel/drivers/mfd/: Kconfig  Makefile  sgc22300.c
Kernel/drivers/mmc/host/: Kconfig  Makefile  sdhci-leipzig.c  sdhci.c  sdhci.h
Kernel/drivers/net/phy/: realtek.c
Kernel/drivers/phy/: Kconfig  Makefile
Kernel/drivers/phy/vtx/: Kconfig  Makefile  phy-leipzig-usb2.c  phy-leipzig-usb3.c
Kernel/drivers/pinctrl/: Kconfig  Makefile  pinctrl-leipzig.c  pinctrl-leipzig.h
Kernel/drivers/power/reset/: Kconfig  Makefile  vtx-reboot.c
Kernel/drivers/pwm/: Kconfig  Makefile  pwm-vpl-agpo.c
Kernel/drivers/regulator/: Kconfig  Makefile  leipzig-regulator.c
Kernel/drivers/rtc/: Kconfig  Makefile  rtc-sgc.c
Kernel/drivers/soc/: Kconfig  Makefile
Kernel/drivers/soc/vtx/: Kconfig  Makefile  vma_device.c  vpl_agpo.c
Kernel/drivers/spi/: spi-dw-core.c  spi-dw-dma.c  spi-dw.h  spi.c
Kernel/drivers/usb/common/: usb-conn-gpio.c
Kernel/drivers/usb/dwc3/: core.c  core.h  dwc3-of-simple.c  ep0.c  gadget.c  gadget.h
Kernel/drivers/usb/gadget/: configfs.c
Kernel/drivers/watchdog/: Kconfig  Makefile  vpl_wdt.c
Kernel/include/dt-bindings/clock/: leipzig-clk.h
Kernel/include/dt-bindings/reset/: vatics,leipzig-reset.h
Kernel/include/linux/: stmmac.h  vma_device.h  vpl_agpo.h
Kernel/include/linux/dma/: leipzig_pdma.h
Kernel/include/linux/mfd/: sgc22300.h
Kernel/include/linux/mtd/: spinand.h
Kernel/include/linux/usb/: composite.h
Kernel/include/soc/vtx/: pinctrl.h
Kernel/include/uapi/linux/: videodev2.h
Kernel/samples/: Kconfig  Makefile
Kernel/samples/agpo/: Makefile  agpo_consumer.c
Kernel/sound/soc/: Kconfig  Makefile
Kernel/sound/soc/vtx/: Kconfig  Makefile  ssm2603.c  ssm2603.h  vtx-asoc-platform.h
SignTool/: sign.py  signtool  vatics_eip130ram_cfga_0523.sbi  vatics_secure_boot.der  vatics_secure_boot_pubHash.c  vatics_secure_boot_publickey.c
TF-A/bl1/: bl1_fwu.c  bl1_main.c
TF-A/bl1/tbbr/: tbbr_img_desc.c
TF-A/bl2/: bl2.ld.S  bl2_image_load_v2.c
TF-A/bl2/aarch64/: bl2_entrypoint.S
TF-A/drivers/mmc/: mmc.c  sdhci-adma.c  sdhci.c
TF-A/drivers/mtd/nand/: spi_nand.c
TF-A/drivers/mtd/nor/: spi_nor.c
TF-A/drivers/mtd/spi-mem/: spi_mem.c
TF-A/drivers/vatics/clk/: clk.mk  kl730_clk.c
TF-A/drivers/vatics/ddr/: csr_defines.h  ddr.mk  ddrc_init.c  dwc_ddrphy_phyinit_out_lpddr4_train1d.c  dwc_ddrphy_phyinit_out_lpddr4_train1d_EVM.c  dwc_ddrphy_phyinit_out_lpddr4_train1d_EVM1200.c  kdrv.h  lpddr4.h  memtester.c  (+15 more)
TF-A/fs/: fat.c
TF-A/include/drivers/: nand.h  spi_mem.h  spi_nand.h  spi_nor.h
TF-A/include/fs/: fat.h  gpt.h  part.h
TF-A/include/lib/: mmio.h
TF-A/include/linux/: bug.h  compat.h  compiler.h  ctype.h  dma-mapping.h  err.h  kernel.h  list.h  types.h  utf.h
TF-A/lib/aarch64/: cache_helpers.S  misc_helpers.S
TF-A/lib/safezone/SBCommon/build_linux/: Makefile.am  configure.ac
TF-A/lib/safezone/SBLib/build_linux/: Makefile.am  bootstrap.sh  configure.ac
TF-A/lib/xlat_tables_v2/: xlat_tables_utils.c
TF-A/make_helpers/: defaults.mk
Toolchain/: devel_leipzig
U-Boot/arch/arm/: Kconfig  Makefile
U-Boot/cmd/: Kconfig  Makefile  boot_standalone.c
U-Boot/common/: usb_hub.c
U-Boot/configs/: leipzig_defconfig  vatics_leipzig_defconfig
U-Boot/drivers/dma/: Kconfig  Makefile  pdma.c
U-Boot/drivers/gpio/: Kconfig  Makefile  vpl_gpio.c
U-Boot/drivers/mmc/: Kconfig  Makefile  mmc-uclass.c  sdhci.c  vatics_sdhci.c
U-Boot/drivers/net/: dwc_eth_qos.c
U-Boot/drivers/phy/: Kconfig  Makefile
U-Boot/drivers/pinctrl/: Kconfig  Makefile  pinctrl-leipzig.c  pinctrl-leipzig.h
U-Boot/drivers/serial/: ns16550.c
U-Boot/drivers/spi/: designware_spi.c
U-Boot/drivers/watchdog/: Kconfig  Makefile  vpl_wdt.c
U-Boot/env/: nand.c
U-Boot/include/: sdhci.h
U-Boot/include/configs/: vatics_leipzig.h
U-Boot/include/dma/: pdma.h  pdma_mmio.h
U-Boot/include/usb/: xhci.h
configs/: leipzig_defconfig  leipzig_rootfs_defconfig
(+997 files in other folders)
